# Quadrotor

./: README.md  notes.md
report/: report.md  (+1 more)
src/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/Common/RRT/: RRT.cpp  RRT.h  RRTClient.cpp  RRTClient.h  TreeNode.cpp  TreeNode.h  main.cpp  route_guide.grpc.pb.cc  route_guide.grpc.pb.h  route_guide.pb.cc  route_guide.pb.h
src/Common/config/: Config.cpp  Config.h  DataStore.cpp  DataStore.h  Handle.cpp  Handle.h
src/Common/object/: Cylinder.cpp  Cylinder.h  Door.cpp  Door.h  Entrance.cpp  Entrance.h  Joint.cpp  Joint.h  Object.cpp  Object.h  Platform.cpp  Platform.h  Tree.cpp  Tree.h
src/Common/route/: NaiveRouter.cpp  NaiveRouter.h  Obstacle.cpp  Obstacle.h  PRMRouter.cpp  PRMRouter.h  RRTRouter.cpp  RRTRouter.h  RRTRpcRouter.cpp  RRTRpcRouter.h  Router.cpp  Router.h
src/Common/sssp/: Graph.cpp  Graph.h
src/Common/stack/: stackObject.h
src/Common/state/: State.h
src/Common/updater/: Updater.cpp  Updater.h
src/Common/utils/: Lock.cpp  Lock.h  Point.cpp  Point.h  ShallowLearning.cpp  ShallowLearning.h  logging.cpp  logging.h  utils.cpp  utils.h
src/Common/vrep/: _dirent.h  license.txt  luaFunctionData.h  scriptFunctionData.h  v_repConst.h  v_repLib.h  v_repTypes.h
src/Following/: analyze.py  img  main.py  mesh.py  mesh.txt  mission_people_follow.ttt  output.prof  path.py  result.txt  test.py  test_follow.py  test_mission_people_follow.ttt  utils.py
src/Following/data/vrep_models/: profile.ttt
src/Following/facerecognition/: contour_detection.py  portrait_detection.py  recognition.py
src/Landing/: CMakeLists.txt  config.ini  drone_grapper.ttt  main.cpp  new_drone_grapper.ttt  pid_landing.ttm  run.sh
src/Landing/data/shallowLearning/: test.txt
src/Landing/state/: ApproachingState.cpp  ApproachingState.h  FinishState.cpp  FinishState.h  LandingState.cpp  LandingState.h  RisingState.cpp  RisingState.h  WaitState.cpp  WaitState.h
src/Landing/updater/: LandingPathUpdater.cpp  LandingPathUpdater.h  LandingUpdater.cpp  LandingUpdater.h  LandingVisionUpdater.cpp  LandingVisionUpdater.h
src/Planning/: CMakeLists.txt  config.ini  data.ini  failed2_mission_path_planning.ttt  failed_mission_path_planning.ttt  fake.ttt  handle.ini  main.cpp  mission_path_planning.ttt  new_mission_path_planning.ttt  plan_drone.ttm
src/Planning/data/shallowLearning/: Find_Circle_On_End.txt  Grab_On_Target_platform.txt  Move_From_Front_Of_GateFrame_55cmX40cm#1_To_Back_Of_GateFrame_80cmX190cm#1.txt  Move_From_Front_Of_GateFrame_55cmX40cm_To_Back_Of_GateFrame_55cmX40cm#1.txt  Move_From_Front_Of_GateFrame_55cmX40cm_To_Back_Of_GateFrame_80cmX190cm#0.txt  Move_From_Front_Of_GateFrame_80cmX190cm#0_To_Back_Of_GateFrame_80cmX190cm#1.txt  Move_From_Front_Of_GateFrame_80cmX190cm#1_To_Back_Of_GateFrame_80cmX190cm#2.txt  Move_From_Front_Of_GateFrame_80cmX190cm#1_To_End.txt  Move_From_Front_Of_GateFrame_80cmX190cm#2_To_End.txt  Move_From_GateFrame_55cmX40cm#0_To_End.txt  Move_From_GateFrame_55cmX40cm#0_To_GateFrame_55cmX40cm.txt  Move_From_GateFrame_55cmX40cm#0_To_GateFrame_80cmX190cm#0.txt  Move_From_GateFrame_55cmX40cm#0_To_Target_platform.txt  Move_From_GateFrame_55cmX40cm_To_End.txt  Move_From_GateFrame_55cmX40cm_To_GateFrame_55cmX40cm#0.txt  Move_From_GateFrame_55cmX40cm_To_GateFrame_80cmX190cm#0.txt  (+37 more)
src/Planning/task/: FindTask.cpp  FindTask.h  GrabTask.cpp  GrabTask.h  MoveTask.cpp  MoveTask.h  Task.cpp  Task.h  ThroughDoorTask.cpp  ThroughDoorTask.h
src/Planning/updater/: PlanningPathUpdater.cpp  PlanningPathUpdater.h  PlanningUpdater.cpp  PlanningUpdater.h  PlanningVisionUpdater.cpp  PlanningVisionUpdater.h
src/grasp/: path.py
src/pid_op/: adjust.py  balance.py  pid.ttm  pid_following.ttt  pid_landing.ttt  pid_landing2.ttt  pid_op.ttt  pid_planning.ttt  pid_planning2.ttt  说明.md
src/rrt-algorithms/: LICENSE  README.md  route_guide_pb2.py  route_guide_pb2_grpc.py  route_guide_server.py  rrt_star_bid_h_3d.py
(+38 files in other folders)
