file(GLOB_RECURSE SRC *.cpp *.c *.hpp *.h)
set(EXECUTABLE_OUTPUT_PATH  ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(Planning ${SRC})
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
if(UNIX)
    target_link_libraries(Planning ${OpenCV_LIBS})
else()
    target_link_libraries(Planning winmm ws2_32 ${OpenCV_LIBS})
endif()

if (BUILD_RRTRPC)
    target_link_libraries(Planning -lprotobuf -pthread -lpthread)
    target_link_libraries(Planning grpc++ grpc++_reflection)
endif(BUILD_RRTRPC)